[metadata]
name = ndp-airi
version = 0.0.1
description = Neural data processing for machine learning applicaitons
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    mne
    soundfile>=0.10.3.post1
    numpy
    scipy 
    librosa
    scikit-learn
    h5py

[options.packages.find]
where = src
